@@ -1,10 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?org-vrjuggler-jccl-settings definition.version="3.1"?>
-<definition xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.vrjuggler.org/jccl/xsd/3.1/definition" name="speech_recog_digital_device" icon_path="jar:file:${VJ_BASE_DIR}/bin/beans/ProxyEditor.jar!/org/vrjuggler/vrjconfig/customeditors/proxyeditor/images/IS_logo.gif" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.1/definition http://www.vrjuggler.org/jccl/xsd/3.1/definition.xsd">
-   <definition_version version="1" label="Speech Recog Digital Device Base Definition">
-      <help>A base definition that all speech recog digital devices should derive from.</help>
-      <parent>input_device</parent>
-      <category>/Devices</category>
-      <upgrade_transform/>
-   </definition_version>
-</definition>
