@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?org-vrjuggler-jccl-settings definition.version="3.1"?>
-<definition xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.vrjuggler.org/jccl/xsd/3.1/definition" name="speech_recog_string_proxy" icon_path="jar:file:${VJ_BASE_DIR}/bin/beans/ProxyEditor.jar!/org/vrjuggler/vrjconfig/customeditors/proxyeditor/images/digital642.jpg" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.1/definition http://www.vrjuggler.org/jccl/xsd/3.1/definition.xsd">
-   <definition_version version="1" label="Speech Recog String Proxy">
-      <help>A proxy to a single speech recog string device input source used to access the data within that device.</help>
-      <parent>proxy</parent>
-      <category>/Proxies</category>
-      <property valuetype="configelementpointer" variable="false" name="device">
-         <help>The device to which this proxy attaches.</help>
-         <value label="Speech Recog Digital Device"/>
-         <allowed_type>speech_recog_string_device</allowed_type>
-      </property>
-      <property valuetype="integer" variable="false" name="unit">
-         <help>The unit in the device to which this proxy attaches.</help>
-         <value label="Unit" defaultvalue="0"/>
-      </property>
-      <upgrade_transform/>
-   </definition_version>
-</definition>
