@@ -9,10 +9,10 @@
       <alias name="MSFTSpeechRecogString" version="1">
          <proxy>MSFTSpeechRecogStringProxy</proxy>
       </alias>
-      <speech_recog_string_proxy name="MSFTSpeechRecogStringProxy" version="1">
+      <string_proxy name="MSFTSpeechRecogStringProxy" version="1">
          <device>MSFTSpeechRecogSringDevice</device>
          <unit>0</unit>
-      </speech_recog_string_proxy>
+      </string_proxy>
       <msft_speech_recog_string name="MSFTSpeechRecogSringDevice" version="1">
          <grammar_file>Grammar1.xml</grammar_file>
       </msft_speech_recog_string>
@@ -20,10 +20,10 @@
       <alias name="MSFTSpeechRecogDigital" version="1">
          <proxy>MSFTSpeechRecogDigitalProxy</proxy>
       </alias>
-      <speech_recog_digital_proxy name="MSFTSpeechRecogDigitalProxy" version="1">
+      <command_proxy name="MSFTSpeechRecogDigitalProxy" version="1">
          <device>MSFTSpeechRecogDigitalDevice</device>
          <unit>0</unit>
-      </speech_recog_digital_proxy>
+      </command_proxy>
       <msft_speech_recog_digital name="MSFTSpeechRecogDigitalDevice" version="1">
          <grammar_file>Grammar2.xml</grammar_file>
       </msft_speech_recog_digital>
