@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-13-2004 patrickh    Updated to require Gadgeteer 0.20.0.
+                        NEW VERSION: 1.1.162
 Nov-05-2004 patrickh    VRJConfig is now installed as a bundle on Mac OS X (in
                         addition to the "traditional" UNIX installation
                         launched by a shell script).
